@@ -15,6 +15,7 @@ New in SVN
 * Fixed Issue 477: Sink footnote separator (patch by asermax)
 * Fixed Issue 473: Support "code" directive like an alias of code-block.
 * Fixed Issue 472: Implemented MyImage._unRestrictSize
+* Fixed Issue 471: Respect class in lineblocks.
 
 New in 0.92
 -----------
